<resources>
    <string name="app_name">DietHub Vendor</string>
    <string name="hallo">Hello</string>
    <string name="login_to_use_app">Login to use the app</string>
    <string name="Incorrect_credential">The phone number or the password is wrong</string>
    <string name="Still_pending">your account is pending</string>
    <string name="Server_problem">Server problem</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter">Enter</string>
    <string name="password">Password</string>
    <string name="restaurant_version">Restaurant Version</string>
    <string name="login">Login</string>
    <string name="ForgotPassword">Forgot Password ?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="EnterEmailToSendPassword">Enter the email to send the password recovery code</string>
    <string name="SendCode">Send Code</string>
    <string name="enter_code_to_password_forPhone">Enter the password recovery code sent to your mobile number</string>
    <string name="enter_code_to_password_forEmail">Enter the password recovery code sent to your Email</string>
    <string name="PasswordRecovery">Password Recovery</string>
    <string name="email_not_found">Email not found</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="phone_number_existing">mobile phone already existing</string>
    <string name="email_existing">Email is already existing</string>
    <string name="data_input_incorrect">There is an error in the data sent</string>
    <string name="Old_Pass">Old Password</string>
    <string name="New_Pass">New Password</string>
    <string name="Confirm_New_Pass">Confirm the New Password</string>
    <string name="Sorry_Password_Not_Match">Sorry, the password does not match</string>
    <string name="Confirm_Pass">Confirm the Password</string>
    <string name="Confirm">Confirm</string>
    <string name="Password_Retrieved_Successfully">Password retrieved successfully</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="home">Home</string>
    <string name="myorders">MyOrders</string>
    <string name="subscriptionOrders">Subscriptions Requests</string>
    <string name="subscription">Subscription</string>
    <string name="meals">Meals</string>
    <string name="mypackages">MyPackages</string>
    <string name="adds">Adds</string>
    <string name="delegates">Delegates</string>
    <string name="sittings">Sittings</string>
    <string name="about_app">About App</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="lang">Language</string>
    <string name="signout">SignOut</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Orders">Orders</string>
    <string name="finished">Finished</string>
    <string name="delivered">delivered</string>
    <string name="readyForDelivery">Ready</string>
    <string name="acceptForDelivery">with rep</string>
    <string name="Preparing">Preparing</string>
    <string name="Prepared">Prepared</string>
    <string name="Pending">Pending</string>
    <string name="Accepted">Accepted</string>
    <string name="Delivering">Delivering</string>
    <string name="NumberOfOrder">Order\'s number :</string>
    <string name="OrderDetails">Order details</string>
    <string name="Count">Count :</string>
    <string name="Total">Total :</string>
    <string name="Payment_Method">Payment Method :</string>
    <string name="Order_State">Order State :</string>
    <string name="Delivery_Address">Delivery Address</string>
    <string name="Add_delegate">Add Delegate</string>
    <string name="name_delegate">name delegate</string>
    <string name="email">email</string>
    <string name="vehicle_details">Vehicle details</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="brand">Brand</string>
    <string name="Type">Type</string>
    <string name="Model">Model</string>
    <string name="license_image">license Image</string>
    <string name="Edit_Order">Edit Order</string>
    <string name="restaurants_name">Restaurants Name</string>
    <string name="about_restaurants">About Restaurants</string>
    <string name="Add_new_delegate">ِAdd new delegate</string>
    <string name="geographical_location">Geographical Location</string>
    <string name="res_logo">Restaurants Logo</string>
    <string name="add_photo">Add Photo</string>
    <string name="Time_work">Time work</string>
    <string name="Saturday">Sat</string>
    <string name="Sunday">Sun</string>
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thu</string>
    <string name="Friday">Fri</string>
    <string name="Edit_Location">Edit Location</string>
    <string name="Notification">Notification</string>
    <string name="App_Lang">App Language</string>
    <string name="Press_To_back">Press back again to exit</string>
    <string name="Save_edits">Save edits</string>
    <string name="Save">Save</string>
    <string name="Add_time">Add Time</string>
    <string name="delegate_name">Delegate Name</string>
    <string name="I_Agree_On">I Agree On</string>
    <string name="Create_Account">Create Account</string>
    <string name="UpDate_Data">Update Data</string>
    <string name="Terms_Conditions">Terms and Conditions</string>
    <string name="Confirm_account">Confirm creation account</string>
    <string name="update_vehicle">Update Vehicle</string>
    <string name="Vehicle_ID">Vehicle ID</string>
    <string name="Vehicle_photos">Vehicle photos</string>
    <string name="Car_license">Car license</string>
    <string name="driving_license">Driving license</string>
    <string name="add_delivery">Add Delivery</string>
    <string name="type_vehicle">Vehicle type</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="year_manufacture">year of manufacture</string>
    <string name="modify_delivery">modify delivery</string>
    <string name="modify_vehicle">modify vehicle</string>
    <string name="modify_Location">modify location</string>
    <string name="modify_Address">modify address</string>
    <string name="delete_delivery">delete delivery</string>
    <string name="cancel">Cancel</string>
    <string name="Return">Return</string>
    <string name="accept">Accept</string>
    <string name="To_restaurant_rep">Assign to own rep.</string>
    <string name="To_restaurant_app">Assign to app rep.</string>
    <string name="Package_Content">Package Content</string>
    <string name="Timing_Delivery">Timing Delivery</string>
    <string name="PackagePrice">Package Price</string>
    <string name="Discount">Discount</string>
    <string name="Calories">Calories</string>
    <string name="Carb">Carb</string>
    <string name="Protein">Protein</string>
    <string name="Fats">Fats</string>
    <string name="Total_Calories">Total Calories</string>
    <string name="Ratings">Ratings</string>
    <string name="ClientInfo">Client Info</string>
    <string name="donthaveVehicle">This delegate has no vehicle</string>
    <string name="deleteDelivery">Delivery successfully deleted</string>
    <string name="noDeliveries">there aren"'"t any deliveries yet</string>
    <string name="Updated">Updated</string>
    <string name="delete">delete</string>
    <string name="createVehicle">Create Vehicle</string>
    <string name="phone_number_incorrect">phone number incorrect</string>
    <string name="maximum_of_five_pictures">A maximum of five pictures</string>
    <string name="Enter_Name">Enter Your Name</string>
    <string name="Enter_Phone">Enter Your Phone</string>
    <string name="agree_terms_conditions">You must agree to the terms and conditions</string>
    <string name="Choose_city">Choose a city</string>
    <string name="Enter_Email">Enter Your Email</string>
    <string name="Enter_Password">Enter Your Password</string>
    <string name="Enter_RePassword">Enter Your RePassword</string>
    <string name="Passwords_are_not_match">Passwords aren"'"t match</string>
    <string name="Password_length">The password must be at least eight characters long and not be more twenty-five characters</string>
    <string name="Choose_personal_picture">Choose the personal picture</string>
    <string name="Email_VALID">Email is not VALID.</string>
    <string name="no_internet_connection">There is no internet connection</string>
    <string name="e_vehicle_model">Enter vehicle model</string>
    <string name="e_number_vehicle">Enter number of vehicle</string>
    <string name="name_length">The name must not be less than two letters and be less than 70 letters</string>
    <string name="try_again">Try Again</string>
    <string name="Unable_contact_server">Unable to contact the server</string>
    <string name="Error_downloading_data">Error downloading data from the server, click on the button to reload the data</string>
    <string name="Make_sure_you_online">Make sure you are online and then try again</string>
    <string name="Calorie">C</string>
    <string name="SAR">SAR</string>
    <string name="description">Description</string>
    <string name="duration">Duration :</string>
    <string name="no_Subscription">There are no subscriptions yet</string>
    <string name="order_was_accepted">the order has been accepted</string>
    <string name="order_was_canceled">the order has been canceled</string>
    <string name="canceling_reason">Write your reason for canceling here ......</string>
    <string name="enter_cancel_reason">Please enter the reason for the cancellation</string>
    <string name="update">Update</string>
    <string name="order_status">Order Status</string>
    <string name="upDate_Order_Status">Update Order Status</string>
    <string name="there_no_order">there are no orders yet</string>
    <string name="no_notifies">there are no notifications yet</string>
    <string name="delete_notifies">The deletion process was successful</string>
    <string name="order_number">Order Number :</string>
    <string name="successfully_registered">The delegate has been registered successfully</string>
    <string name="cashOnDelivery">Cash on delivery</string>
    <string name="online">online</string>
    <string name="To">To</string>
    <string name="From">From</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_changes">There are no changes</string>
    <string name="Complete_data">Complete the data</string>
    <string name="DescriptionEn">English Description</string>
    <string name="DescriptionAr">Arabic Description</string>
    <string name="AddressEn">English Address</string>
    <string name="enter_AddressEn">Enter English Address</string>
    <string name="AddressAr">Arabic Address</string>
    <string name="enter_AddressAr">Enter Arabic Address</string>
    <string name="modify_personal_info">Modify Personal Info</string>
    <string name="modify_restaurant_photos">Modify Restaurant Photos</string>
    <string name="restaurant_photos">Restaurant Photos</string>
    <string name="modify_working_time">Modify Working Time</string>
    <string name="Successfully_updated">Successfully updated</string>
    <string name="Session_Expired">Session Expired</string>
    <string name="Session_Expired_Message">Please login again.</string>
</resources>