<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Login.Login_inActivity"
    android:fillViewport="true"
    android:background="@color/background"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/AppBer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title"
                    style="@style/TitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/asset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AppBer" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_bold"
            android:includeFontPadding="false"
            android:text="@string/hallo"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_35sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView14" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticaneuelt_arabic"
            android:includeFontPadding="false"
            android:text="@string/login_to_use_app"
            android:textColor="@color/ColorTextDescription"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />

        <EditText
            android:id="@+id/PhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/style_textinput"
            android:drawableStart="@drawable/call"
            android:hint="@string/phone_number"
            android:text="+966560123456"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="phone"
            android:textSize="@dimen/_17sdp"
            android:theme="@style/EditText_Style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView29"
            app:layout_constraintWidth_percent=".9" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/style_textinput"
            android:drawableStart="@drawable/padlock"
            android:hint="@string/password"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="textPassword"
            android:text="password-1"
            android:textSize="@dimen/_17sdp"
            android:theme="@style/EditText_Style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PhoneNumber"
            app:layout_constraintWidth_percent=".9" />

        <TextView
            android:id="@+id/ForgottenPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="onClick"
            android:text="@string/ForgotPassword"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/helveticaneuelt_arabic"/>
        <Button
            android:id="@+id/EnterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/style_button"
            android:fontFamily="@font/helveticaneuelt_arabic"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_17sdp"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sdp"
            app:layout_constraintTop_toBottomOf="@+id/ForgottenPassword" />

        <TextView
            android:id="@+id/WithOutEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/helveticaneuelt_arabic"
            android:includeFontPadding="false"
            android:text="@string/restaurant_version"
            android:textColor="#000"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EnterButton"
            app:layout_constraintVertical_bias=".9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>