<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_30sdp"
    android:layout_marginRight="@dimen/_20sdp"
    android:layout_marginLeft="@dimen/_20sdp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp">

        <EditText
            android:id="@+id/AddressAr"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_weight="1"
            android:background="@drawable/style_pop_edittext"
            android:gravity="top"
            android:hint="@string/AddressAr"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="255"
            android:textSize="@dimen/_17sdp"
            android:theme="@style/EditText_Style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/AddressEn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_weight="1"
            android:background="@drawable/style_pop_edittext"
            android:gravity="top"
            android:hint="@string/AddressEn"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="255"
            android:textSize="@dimen/_17sdp"
            android:theme="@style/EditText_Style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AddressAr"
            android:layout_marginTop="@dimen/_15sdp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AddressEn"
            android:layout_marginTop="@dimen/_20sdp">
            <Button
                android:id="@+id/CancelButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/style_close_button"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:fontFamily="@font/helveticaneuelt_arabic"
                android:includeFontPadding="false"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_17sdp"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/AddressSaveButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_13sdp"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_20sdp"
                android:fontFamily="@font/helveticaneuelt_arabic"
                android:includeFontPadding="false"
                android:text="@string/Save"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:textAllCaps="false"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>