<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Password_Recovery.Password_RecoveryActivity"
    android:background="@color/background"
    android:fillViewport="true"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Layout">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:onClick="BackButton"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".45" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".15" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".85" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/asset"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticaneuelt_arabic"
            android:text="@string/EnterEmailToSendPassword"
            android:textColor="#000"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="@+id/guideline8"
            app:layout_constraintStart_toEndOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/imageView14"
            android:gravity="center"
            android:includeFontPadding="false"
            android:layout_marginTop="@dimen/_10sdp"/>

        <EditText
            android:id="@+id/EmailResetPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/style_textinput"
            android:drawableStart="@drawable/envelope"
            android:drawableRight="@drawable/envelope"
            android:hint="@string/email"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/_17sdp"
            android:theme="@style/EditText_Style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView30"
            app:layout_constraintWidth_percent=".9"/>


        <Button
            android:id="@+id/Send_Code_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/style_button"
            android:fontFamily="@font/helveticaneuelt_arabic"
            android:includeFontPadding="false"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_17sdp"
            android:text="@string/SendCode"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EmailResetPass"
            app:layout_constraintWidth_percent=".9"
            android:textAllCaps="false"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
