<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OrderFragment"
    android:id="@+id/nav_myOrders"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".35" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".65" />

            <LinearLayout
                android:id="@+id/ProcessingLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button_normal"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingTop="7dp"
                android:paddingRight="15dp"
                android:paddingBottom="7dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finished"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_17sdp"
                    android:textStyle="bold"
                    android:id="@+id/ProcessingText"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/DProgressLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button_normal"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingTop="7dp"
                android:paddingRight="15dp"
                android:paddingBottom="7dp"
                app:layout_constraintEnd_toEndOf="@+id/guideline4"
                app:layout_constraintStart_toEndOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Preparing"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_17sdp"
                    android:textStyle="bold"
                    android:id="@+id/DProgressText"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ProcessedLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button_active"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingTop="7dp"
                android:paddingRight="15dp"
                android:paddingBottom="7dp"
                app:layout_constraintEnd_toEndOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Accepted"
                    android:textColor="@color/background"
                    android:textSize="@dimen/_17sdp"
                    android:textStyle="bold"
                    android:id="@+id/ProcessedText"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>